--- a/EcnesLibrary/Views/Books/Create.cshtml
+++ b/EcnesLibrary/Views/Books/Create.cshtml
@@ -24,7 +24,16 @@
             </div>
             <div class="form-group">
                 <label asp-for="Genre" class="control-label"></label>
-                <input asp-for="Genre" class="form-control" />
+                <select asp-for="Genre" class="form-control">
+
+                    <option value="Romance">Romance</option>
+                    <option value="Fiction">Fiction</option>
+                    <option value="Science-Fiction">Science-Fiction</option>
+                    <option value="Horror">Horror</option>
+                    <option value="Drama">Drama</option>
+                    <option value="Fantasy">Fantasy</option>
+
+                </select>
                 <span asp-validation-for="Genre" class="text-danger"></span>
             </div>
             <div class="form-group">
