--- a/EcnesLibrary/Views/Home/Index.cshtml
+++ b/EcnesLibrary/Views/Home/Index.cshtml
@@ -3,6 +3,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+    <h1 class="display-4">Welcome to Ecnes Library!</h1>
+    <p>Where you can find all types of Books to read</p>
+    </div>
